<resources>
    <string name="app_name">SiPahias</string>
    <string name="siPahias">SiPahias</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="password_conf">Konfirmasi Kata Sandi</string>
    <string name="masuk">Masuk</string>
    <string name="batal">Batal</string>
    <string name="daftar">Daftar</string>
    <string name="nama">Nama Lengkap</string>
    <string name="no_telp">No. Telepon</string>
    <string name="register">Daftar</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Akun</string>
    <string name="poin">Poin</string>
    <string name="tukar">Tukar Poin</string>
    <string name="riwayat">Riwayat</string>
    <string-array name="jenis_sampah">
        <item>Jenis Sampah</item>
        <item>Kertas</item>
        <item>Plastik</item>
        <item>Logam</item>
        <item>Lain_lain</item>
    </string-array>
    <string name="next">Lainnya</string>
    <string name="botol_t">Botol Plastik</string>
    <string name="text_info">Penukaran sampah plastik :</string>
    <string name="petunjuk_satu">1. Kumpulkan sampah anda</string>
    <string name="petunjuk_dua">2. Pilih menu antar atau jemput</string>
    <string name="petunjuk_tiga">3. Dapatkan Poin dari hasil penukaran sampah</string>
    <string name="awal_petunjuk">3 Langkah Mudah Tukar Sampah Anda</string>
    <string name="banner_image">Banner Image</string>
    <string name="app_logo">App Logo</string>
    <string name="my_point">Poin :</string>
    <string name="point_info">Info Poin</string>
    <string name="daftar_event">Daftar Event</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jemput_sampah">Jemput Sampah</string>
    <string name="lokasi">Lokasi</string>
    <string name="terima_sampah">Terima Sampah</string>
    <string name="permintaan_antar">Permintaan Antar</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="isi_form">Isi Form</string>
    <string name="berat">Berat</string>
    <string name="jumlah2"><font size="15">Jumlah</font></string>
    <string name="tanggal_waktu">Tanggal/Waktu</string>
    <string name="tombol_toggle_date_picker">Tombol toggle date picker</string>
    <string name="ok">OK</string>
    <string name="prompt_jenis_sampah">Jenis Sampah</string>
    <string name="prompt_satuan_sampah">Satuan</string>
    <string name="judul_reward">Reward</string>
    <string name="edit_event">Edit Event</string>
    <string name="ganti_foto">Ganti Foto</string>
    <string name="nama_event">Nama Event</string>
    <string name="waktu_tanggal">Waktu dan Tanggal</string>
    <string name="tempat">Tempat</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="tambah_event">Tambah Event</string>
    <string name="tambah_foto">Tambah Foto</string>
    <string name="tambah">Tambah</string>
    <string name="tambah_reward">Tambah Reward</string>
    <string name="nama_reward">Nama</string>
    <string name="edit_foto">Edit Foto</string>
    <string name="prompt_jenis_reward">Jenis</string>
    <string-array name="jenis">
        <item>Jenis</item>
        <item>Barang</item>
        <item>Kupon</item>
    </string-array>
    <string name="titikdua">:</string>
    <string name="no_identitas">No Identitas</string>
    <string name="tentang">Tentang</string>
    <string name="pos_pengumpulansampah">Pos Pengumpulan Sampah</string>
    <string name="gd7">GD 7</string>
    <string name="nogd7">085363427258</string>
    <string name="jam_tentang">08.00 - 17.00 WIB</string>
    <string name="gd9">GD 9</string>
    <string name="nogd9">083426186478</string>
    <string name="posstpm1">Pos Satpam 1</string>
    <string name="nostpm1">086456725846</string>
    <string name="asnazaret">Asrama Nazareth</string>
    <string name="nonazaret">085363427258</string>
    <string name="asmahanaim">Asrama Mahanaim</string>
    <string name="nomahanaim">086452671575</string>
    <string name="koperasi">Koperasi</string>
    <string name="nokoperasi">086454264335</string>
    <string name="daftar_sekarang"> <u>Daftar Sekarang</u></string>
    <string name="keluar">Keluar</string>
    <string name="kata_sandi_lama">Kata Sandi Lama</string>
    <string name="kata_sandi_baru">Kata Sandi Baru</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi Kata Sandi</string>
    <string name="alamat">Alamat</string>
    <string name="akun">Akun</string>
    <string name="suntingprofil">Edit Profil</string>
    <string name="namalengkap">Nama Lengkap</string>
    <string name="email1">e-mail</string>
    <string name="notelepon">No. telepon</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="identitas">No. Identitas (NIM/NIDN/NIK)</string>
    <string name="simpan">Simpan</string>
    <string name="ganti_foto_profil">Ganti foto profil</string>
    <string name="tukar_poin">Tukar</string>
    <string name="antar">Antar</string>
    <string name="status_antar">Status Antar</string>
    <string name="daftar_lokasi_pengantaran_sampah"><u>Daftar Lokasi Pengantaran Sampah</u></string>
    <string name="status_jemput">Status Jemput</string>
    <string name="jemput">Jemput</string>
    <string name="lokasi_penjemputan">Lokasi Penjemputan</string>
    <string name="SiPahias">SiPahias</string>
    <string name="no">No</string>
    <string name="rincian">Rincian</string>
    <string name="status">Status</string>
    <string name="riwayat_poin">Riwayat Poin</string>
    <string name="tanggal">Tanggal</string>
    <string name="tanggal_jemput">Tanggal Jemput</string>
    <string name="tempat_penjemputan">Tempat Penjemputan</string>
    <string name="terima">Terima</string>
    <string-array name="satuan">
        <item>Satuan</item>
        <item>Kg</item>
    </string-array>
    <string name="title_tentang">Tentang</string>
    <string name="title_info">Info Poin</string>
    <string name="poinmasuk_tab">Poin Masuk</string>
    <string name="poinkeluar_tab">Poin Keluar</string>
    <string name="keterangan">Keterangan</string>
    <string name="jenis_sampahh">Jenis Sampah</string>
    <string-array name="detail_sampah">
        <item>Koran</item>
        <item>Kardus</item>
        <item>Majalah</item>
        <item>Buku</item>
    </string-array>
    <string-array name="data_tanggal_masuk">
        <item>20 Februari 2020</item>
        <item>25 Februari 2020</item>
        <item>28 Februari 2020</item>
        <item>2 Maret 2020</item>
    </string-array>
    <string-array name="ket_poin_masuk">
        <item>Penukaran sampah plastik: 6 kg</item>
        <item>Penukaran sampah plastik: 3 kg</item>
        <item>Penukaran sampah plastik: 2 kg</item>
        <item>Penukaran sampah besi: 20 kg</item>
    </string-array>
    <string name="navigation_drawer_open">navigation drawer open</string>
    <string name="navigation_drawer_close">navigation drawer close</string>
    <string name="navigation_view_item_1">Terima Sampah</string>
    <string name="navigation_view_item_2">Jemput</string>
    <string name="navigation_view_item_3">Daftar Pengguna</string>
    <string name="navigation_view_item_4">Event</string>
    <string name="navigation_view_item_5">Reward</string>
    <string name="navigation_view_item_6">Riwayat Tukar Sampah</string>
    <string name="sipahias">SiPahias</string>
    <string name="daftar_pengguna">Daftar Pengguna</string>
    <string name="event">Event</string>
    <string name="kupon">Kupon</string>
    <string name="riwayat_tukar_poin">Riwayat Tukar Poin</string>
    <string name="kegiatan">Kegiatan</string>
    <string name="tv_tukarpoin">Tukar Poin</string>
    <string name="start_value_point">0</string>
    <string name="list_barang">List Barang</string>
    <string name="list_kupon">List Kupon</string>
    <string name="dummyname_listbarang">Nama Item</string>
    <string name="dummyprice_listbarang">Harga Item</string>
    <string name="dummyname_listkupon">Nama Kupon</string>
    <string name="dummyprice_listkupon">Harga Kupon</string>
    <string name="ganti_kata_sandi">Ganti Kata Sandi</string>
    <string name="dummydate_sttp">Tanggal Penukaran</string>
    <string name="dummyaction_sttp">Aksi Tukar Poin</string>
    <string name="dummystatus_sttp">Status Penukaran</string>
    <string name="kamu_belum_memiliki_request_antar">Kamu belum memiliki request antar</string>
    <string name="dummydate_pa">Tanggal Permintaan</string>
    <string name="dummyperson_pa">Peminta Antar</string>
    <string name="dummynumphone_pa">Nomor HP Peminta</string>
    <string name="Daftar_Reward">Daftar</string>
    <string name="Permintaan_Reward">Permintaan</string>
    <string name="Riwayat_Reward">Riwayat</string>
    <string name="dummyname_listReward">Nama Reward</string>
    <string name="_04_06_2020">04–06–2020</string>
    <string name="laxojun1_gmail_com">laxojun1@gmail.com</string>
    <string name="audit">Audit</string>
    <string name="riwayat_tukar_sampah">Riwayat Tukar Sampah</string>
    <string name="_28_03_2020">28-03-2020</string>
    <string name="email_nina">nina@gmail.com</string>
    <string name="poin_nina">5000</string>
    <string name="status_nina">Diterima</string>
    <string name="email_ous">ivani@gmail.com</string>
    <string name="poin_ous">5000</string>
    <string name="status_ous">Diterima</string>
    <string name="email_dian">dian@gmail.com</string>
    <string name="poin_dian">7000</string>
    <string name="status_dian">Ditolak</string>
    <string name="email_lala">lala@gmail.com</string>
    <string name="poin_lala">10000</string>
    <string name="status_lala">Ditolak</string>
    <string name="_28_02_2020">28-02-2020</string>
    <string name="_23_01_2020">23-01-2020</string>
    <string name="_21_01_2020">21-01-2020</string>
    <string name="dummy_riwayat1">Tanggal</string>
    <string name="dummy_riwayat2">Email</string>
    <string name="dummy_riwayat3">No Telepon</string>
    <string name="dummy_riwayat4">Jenis Sampah</string>
    <string name="dummy_riwayat5">Poin</string>
    <string name="judultp_listbarangkupon"><![CDATA[List Barang & Kupon]]></string>
    <string name="jenis_reward">Jenis</string>
    <string name="harga_reward">Harga</string>
    <string name="poin_reward">Poin Item</string>
    <string name="questionbuyitem">Ingin menukar poin anda dengan barang ini?</string>
    <string name="tukarPoin">Tukar</string>
    <string name="email_pengguna">Email Pengguna</string>
    <string name="kamu_belum_memiliki_request_jemput">Kamu belum memiliki request jemput</string>
    <string name="dummydate_requestreward">Tanggal Request</string>
    <string name="dummyperson_requestreward">Email Requester</string>
    <string name="dummyaction_requestreward">Aksi Request</string>
    <string name="btn_tolak_requestreward">Tolak</string>
    <string name="btn_terima_requestreward">Terima</string>
    <string name="dummydate_riwayatreward">Tanggal Request</string>
    <string name="dummyaction_riwayatreward">Aksi Request</string>
    <string name="dummyperson_riwayatreward">Email Requester</string>
    <string name="dummystatus_riwayatreward">Status Request</string>
    <string name="kamu_belum_memiliki_riwayat_poin">Kamu belum memiliki riwayat poin</string>
    <string name="dummydelReward">Hapus</string>
    <string name="questiondeletereward">Ingin menghapus data reward ?</string>
    <string name="judultp_listbarang">List Barang</string>
    <string name="judultp_listkupon">List Kupon</string>
    <string name="edit_reward">Edit Reward</string>
    <string name="ket_detail_event">Daftarkan diri anda ke admin acara dan\nSilahkan bawa barang yang ingin\nAnda lelangkan\nCP: Andi 081356248769</string>
    <string name="dumdate_sttp">Tanggal STTP</string>
    <string name="dumaction_sttp">Aksi STTP</string>
    <string name="dumstatus_sttp">Status STTP</string>
</resources>