<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background_item_list_barang"
    android:layout_marginVertical="5dp"
    android:layout_marginHorizontal="5dp">

    <TextView
        android:id="@+id/tv_tanggal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/dummy_riwayat1"
        android:textSize="15dp"
        android:textColor="@color/colorBlack"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        />
    <TextView
        android:id="@+id/tv_email"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/dummy_riwayat2"
        android:textSize="15dp"
        android:textColor="@color/colorBlack"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        />
    <TextView
        android:id="@+id/tv_notelp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/dummy_riwayat3"
        android:textSize="15dp"
        android:textColor="@color/colorBlack"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        />
    <TextView
        android:id="@+id/tv_jenissampah"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/dummy_riwayat4"
        android:textSize="15dp"
        android:textColor="@color/colorBlack"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        />
    <TextView
        android:id="@+id/tv_poin"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/dummy_riwayat5"
        android:textSize="15dp"
        android:textColor="@color/colorBlack"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        />
</LinearLayout>