<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_date_riwayatreward"
        android:layout_width="match_parent"
        android:layout_weight="1.0"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg2"
        android:textSize="10dp"
        android:text="@string/dummydate_riwayatreward"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_person_riwayatreward"
        android:layout_width="match_parent"
        android:layout_weight="1.0"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg2"
        android:gravity="center"
        android:text="@string/dummyperson_riwayatreward"
        android:textSize="10dp" />

    <TextView
        android:id="@+id/tv_action_riwayatreward"
        android:layout_width="match_parent"
        android:layout_weight="0.8"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg2"
        android:textSize="10dp"
        android:text="@string/dummyaction_riwayatreward"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_status_riwayatreward"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg2"
        android:textSize="10dp"
        android:text="@string/dummystatus_riwayatreward"
        android:gravity="center"/>


</LinearLayout>