<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/idTanggal"
        android:layout_width="110dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:textSize="10sp"
        android:text="@string/_04_06_2020"
        android:gravity="center"/>

    <TextView
        android:id="@+id/idEmail"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:gravity="center"
        android:text="@string/laxojun1_gmail_com"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/idLokasi"
        android:layout_width="105dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg"
        android:textSize="10sp"
        android:text="@string/audit"
        android:gravity="center"/>


</LinearLayout>