<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mppl.banksampah.user.ui.home.HomeFragment"
        android:label="@string/title_home"
        app:labelVisibilityMode="labeled"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_tentang"
        android:name="com.mppl.banksampah.user.ui.tentang.TentangFragment"
        android:label="@string/title_home"
        app:labelVisibilityMode="labeled"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/navigation_infopoin"
        android:name="com.mppl.banksampah.user.ui.riwayatpoin.RiwayatPoinFragment"
        android:label="@string/point_info"
        app:labelVisibilityMode="labeled"
        tools:layout="@layout/fragment_riwayatpoin" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.mppl.banksampah.user.ui.akun.ProfileFragment"
        android:label="@string/title_notifications"
        app:labelVisibilityMode="labeled"
        tools:layout="@layout/fragment_profile" />
</navigation>