<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_date_sttp"
        android:layout_width="match_parent"
        android:layout_weight="1.07"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg2"
        android:textSize="20dp"
        android:text="@string/dumdate_sttp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_action_sttp"
        android:layout_width="match_parent"
        android:layout_weight="0.8"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg2"
        android:gravity="center"
        android:text="@string/dumaction_sttp"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tv_status_sttp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:background="@drawable/table_content_cell_bg2"
        android:textSize="20dp"
        android:text="@string/dumstatus_sttp"
        android:gravity="center"/>


</LinearLayout>