<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background_item_list_barang"
    android:layout_marginVertical="5dp"
    android:layout_marginHorizontal="5dp">

    <TextView
        android:id="@+id/tv_date_pa"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/dummydate_pa"
        android:textSize="15dp"
        android:textColor="@color/colorBlack"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        />
    <TextView
        android:id="@+id/tv_person_pa"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/dummyperson_pa"
        android:textSize="15dp"
        android:textColor="@color/colorBlack"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        />
    <TextView
        android:id="@+id/tv_phone_pa"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/dummynumphone_pa"
        android:textSize="15dp"
        android:textColor="@color/colorBlack"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        />
</LinearLayout>