<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/questionbuyitem"
        android:textColor="@color/green"
        android:textSize="25dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="20dp">

        <Button
            android:id="@+id/negativebuttonRewardUser"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/batal"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:background="@color/red"
            android:layout_marginHorizontal="30dp"/>
        <Button
            android:id="@+id/positivebuttonRewardUser"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/tukarPoin"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:background="@color/green"
            android:layout_marginHorizontal="20dp"/>

    </LinearLayout>

</LinearLayout>