<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="50dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="98dp"
                android:layout_height="50dp"
                android:background="@drawable/table_content_cell_bg3"
                android:gravity="center"
                android:text="@string/tanggal"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:layout_width="123dp"
                android:layout_height="50dp"
                android:background="@drawable/table_content_cell_bg3"
                android:gravity="center"
                android:text="@string/email"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:layout_width="58dp"
                android:layout_height="50dp"
                android:background="@drawable/table_content_cell_bg3"
                android:gravity="center"
                android:text="@string/poin"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:layout_width="99dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:background="@drawable/table_content_cell_bg3"
                android:gravity="center"
                android:text="@string/status"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/tvBelumRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/kamu_belum_memiliki_riwayat_poin"
            android:textSize="20sp"
            android:translationY="40dp"
            android:visibility="gone" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTukarAntar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:listitem="@layout/table_list_riwayat_tukar_sampah" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>